# BIRD

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  bppr  cmake_install.cmake
data/avito/: graph.txt.new  seeds-ori.txt  seeds.txt  stat.txt
include/: algo.h  alias.h  graph.h  utils.h
result/relative/avito/BDPush/0.01/: 166.txt  3637.txt  3732.txt  4124.txt  4170.txt
src/: algo.cc  bppr.cc  graph.cc
